Specify peer dependency for react v0.14 or v15.0.

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "loaders.css": "^0.1.1",
     "lodash": "^3.9.1",
     "react-bootstrap": "^0.20.3",
-    "react-dom": "^0.14.0",
+    "react-dom": "^15.0.0",
     "webpack": "^1.7.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.0",
